azrmps/2.2.0/AzureRM.Profile/AzureRM.Profile.md
---
Module Name: AzureRM.Profile
Module Guid: 342714fc-4009-4863-8afb-a9067e3db04b
Download Help Link: None
Help Version: 3.0.0.0
Locale: en-US
ms.assetid: 20ADEA79-B7F2-456E-A1AD-8E05CB31048C
uid: AzureRM.Profile
updated_at: 11/11/2016 15:11 PM
ms.date: 11/11/2016
content_git_url: https://github.com/Azure/azure-docs-powershell/blob/marchrelease/azureps-cmdlets-docs/ResourceManager/AzureRM.Profile/v2.1.0/AzureRM.Profile.md
original_content_git_url: https://github.com/Azure/azure-docs-powershell/blob/marchrelease/azureps-cmdlets-docs/ResourceManager/AzureRM.Profile/v2.1.0/AzureRM.Profile.md
gitcommit: https://github.com/Azure/azure-docs-powershell/blob/79eeb985ea480979357fb4695832a0c3d29a48bf
ms.topic: conceptual
author: erickson-doug
ms.author: PowerShellHelpPub
keywords: powershell, cmdlet
---

# AzureRM.Profile Module
## Description
This topic displays help topics for the Azure Profile cmdlets.

## AzureRM.Profile Cmdlets
### [Add-AzureRmAccount](./Add-AzureRmAccount.md)
Adds an authenticated account to use for Resource Manager cmdlet requests.


### [Add-AzureRmEnvironment](./Add-AzureRmEnvironment.md)
Adds endpoints and metadata for an instance of Resource Manager.


### [Disable-AzureRmDataCollection](./Disable-AzureRmDataCollection.md)
Disables collection of data to improve user experience.


### [Enable-AzureRmDataCollection](./Enable-AzureRmDataCollection.md)
Enables collection of data to improve user experience.


### [Get-AzureRmContext](./Get-AzureRmContext.md)
Gets the metadata used to authenticate Resource Manager requests.


### [Get-AzureRmEnvironment](./Get-AzureRmEnvironment.md)
Gets endpoints and metadata for an instance of Azure services.


### [Get-AzureRmSubscription](./Get-AzureRmSubscription.md)
Gets subscriptions that the current account can access.


### [Get-AzureRmTenant](./Get-AzureRmTenant.md)
Gets tenants that are authorized for the current user.


### [Remove-AzureRmEnvironment](./Remove-AzureRmEnvironment.md)
Removes endpoints and metadata for connecting to an Azure instance.


### [Save-AzureRmProfile](./Save-AzureRmProfile.md)
Saves the current authentication information for use in other PowerShell sessions.


### [Select-AzureRmProfile](./Select-AzureRmProfile.md)
Loads Azure authentication information from a file.


### [Set-AzureRmContext](./Set-AzureRmContext.md)
Sets the tenant, subscription, and environment for cmdlets to use in the current session.


### [Set-AzureRmEnvironment](./Set-AzureRmEnvironment.md)
Sets properties for an Azure environment.



